[sdk] Update C++ sdk, RuyiNet lobby and telemetry service

--- a/RuyiSDKCpp/RuyiSDKCpp.vcxproj.filters
+++ b/RuyiSDKCpp/RuyiSDKCpp.vcxproj.filters
@@ -238,6 +238,9 @@
     <ClCompile Include="RuyiNet\Service\RuyiNetLobbyService.cpp">
       <Filter>Sources\RuyiNet\Service</Filter>
     </ClCompile>
+    <ClCompile Include="RuyiNet\Service\RuyiNetTelemetryService.cpp">
+      <Filter>Sources\RuyiNet\Service</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Generated\GlobalInputDefine\GlobalInputDefineSDKDataTypes_constants.h">
@@ -482,6 +485,12 @@
       <Filter>Sources\RuyiNet\Service</Filter>
     </ClInclude>
     <ClInclude Include="RuyiNet\Service\RuyiNetLobbyService.h">
+      <Filter>Sources\RuyiNet\Service</Filter>
+    </ClInclude>
+    <ClInclude Include="RuyiNet\Response\RuyiNetTelemetrySessionResponse.h">
+      <Filter>Sources\RuyiNet\Response</Filter>
+    </ClInclude>
+    <ClInclude Include="RuyiNet\Service\RuyiNetTelemetryService.h">
       <Filter>Sources\RuyiNet\Service</Filter>
     </ClInclude>
   </ItemGroup>
