--- a/RuyiSDKCpp/RuyiSDKCpp.vcxproj
+++ b/RuyiSDKCpp/RuyiSDKCpp.vcxproj
@@ -274,6 +274,7 @@
     <ClCompile Include="RuyiNet\Service\RuyiNetPartyService.cpp" />
     <ClCompile Include="RuyiNet\Service\RuyiNetProfileService.cpp" />
     <ClCompile Include="RuyiNet\Service\RuyiNetService.cpp" />
+    <ClCompile Include="RuyiNet\Service\RuyiNetTelemetryService.cpp" />
     <ClCompile Include="RuyiNet\Service\RuyiNetUserFileService.cpp" />
     <ClCompile Include="RuyiNet\Service\RuyiNetVideoService.cpp" />
     <ClCompile Include="RuyiSDK.cpp" />
@@ -343,6 +344,7 @@
     <ClInclude Include="RuyiNet\Response\RuyiNetResponse.h" />
     <ClInclude Include="RuyiNet\Response\RuyiNetSocialLeaderboardResponse.h" />
     <ClInclude Include="RuyiNet\Response\RuyiNetSummaryFriendData.h" />
+    <ClInclude Include="RuyiNet\Response\RuyiNetTelemetrySessionResponse.h" />
     <ClInclude Include="RuyiNet\Response\RuyiNetUploadFileResponse.h" />
     <ClInclude Include="RuyiNet\RuyiNetClient.h" />
     <ClInclude Include="RuyiNet\RuyiNetException.h" />
@@ -357,6 +359,7 @@
     <ClInclude Include="RuyiNet\Service\RuyiNetProfileService.h" />
     <ClInclude Include="RuyiNet\Service\RuyiNetRotationType.h" />
     <ClInclude Include="RuyiNet\Service\RuyiNetService.h" />
+    <ClInclude Include="RuyiNet\Service\RuyiNetTelemetryService.h" />
     <ClInclude Include="RuyiNet\Service\RuyiNetUserFileService.h" />
     <ClInclude Include="RuyiNet\Service\RuyiNetVideoService.h" />
     <ClInclude Include="RuyiSDK.h">
