--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -71,7 +71,6 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\ExternalErrors\ExternalErrorsSDKDataTypes.Constants.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\Gamepad.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\GamepadButtonFlags.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\GamepadFunctionKey.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\GlobalInputDefineSDKDataTypes.Constants.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\JoystickOffset.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\Key.cs" />
@@ -115,6 +114,7 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\StorageLayer\GetLocalPathResult.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\StorageLayer\StorageLayerService.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\UserServiceExternal\InputActionEvent.cs" />
+    <Compile Include="GeneratedSync\Ruyi\SDK\UserServiceExternal\TriggerKeys.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\UserServiceExternal\UserEvent.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\UserServiceExternal\UserGender.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\UserServiceExternal\UserInfo_Public.cs" />
